# yamisskey-ansible

./: .ansible-lint  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  Makefile  README.md  SECURITY.md  SOPS-SETUP.md  TESTING.md  Taskfile.yml  ansible-collections.cfg  ansible.cfg  diff.patch  flake.nix  inventory.template.yml  pyproject.toml  requirements-dev.yml  requirements.yml  shell.nix
.github/: README.md
ansible/: README.md
docs/: SECURITY.md  TDD_GUIDE.md  secrets-migration-strategy.md
host_vars/: README.md
molecule-templates/: README.md  converge.yml.template  midclt-mock.py  molecule.yml.template  nix-aware-converge.yml.template  prepare.yml.template  setup_molecule.sh  verify.yml.template
playbooks/: ai.yml  authentik.yml  cloudflare-warp.yml  cloudflared.yml  common.yml  cryptpad.yml  ctfd.yml  db-backup.yml  deploy-core-infrastructure.yml  deploy-misskey-stack.yml  deploy-proxy-services.yml  deployment-stack.yml  export.yml  ghq.yml  import.yml  integration-test.yml  matrix.yml  mcaptcha.yml  minecraft.yml  minio-backup.yml  minio-migration.yml  minio.yml  misskey-backup.yml  misskey-proxy.yml  misskey.yml  modsecurity-nginx.yml  monitor.yml  neo-quesdon.yml  nostr.yml  operations.yml  outline.yml  security.yml  system-init.yml  system-test.yml  test-core-infrastructure.yml  test-misskey.yml  tpot.yml  uptime.yml  watch.yml  yamix.yml
scripts/: ansible-logrotate.conf  pre-commit-molecule.sh  pre-commit-sops-decrypt.sh  pre-commit-sops-encrypt.sh  pre-commit-sops-reencrypt.sh  secure-vault-setup.sh  setup-sops.sh
(+1432 files in other folders)
